--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,20 @@
-<%= form_tag practitioners_path, remote: true, method: 'get' do %>
-  <%= label_tag :postcode %>
-  <%= text_field_tag :postcode %>
-  <%= submit_tag 'Search' %>
-<% end %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Start Page</title>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+</head>
+<body>
+  <div class="start-page">
+    <h4>I am worried about...</h4>
+    <a href="<%= myself_home_index_path %>"><button id="myself" class="start-button button">MYSELF</button></a>
+    <a href="./someone-else.html"><button id="someone" class="start-button button">SOMEONE ELSE</button></a>
+  </div>
+</body>
+</html>
